--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#2F374B</color>
+    <color name="contrast_background">#374058</color>
+    <color name="accent_color">#FFBCB5</color>
 </resources>
