List of chats preview
1- Landing Screen renamed to Landing Activty
2- Activity_landing_screen renamed to Activity_Landing
3- Added a bunch of chat tests in LandingActivity
4- Util renamed to Lib
5- Lib structured
6- Added Chat and ChatsAdapter
7- Added a layout representing the chat card
8- Added some colors and strings in resources

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="background">#2F374B</color>
     <color name="contrast_background">#374058</color>
     <color name="accent_color">#FFBCB5</color>
+    <color name="detail_color_primary">#FFDAD6</color>
+    <color name="detail_color_secondary">#9AA4C1</color>
 </resources>
