--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background">#2F374B</color>
+    <color name="background">#31384B</color>
     <color name="detail_color_primary">#FFDAD6</color>
     <color name="accent_color">#FFBCB5</color>
     <color name="hints">#989EB1</color>
