--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -29,6 +29,7 @@
           android:text="@string/already_login"
           android:textColor="#90A4AE"
           android:textSize="16sp"
+          android:textStyle="bold"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/btnRegister"
@@ -45,6 +46,7 @@
           android:text="@string/login"
           android:textColor="@color/white"
           android:textSize="16sp"
+          android:textStyle="bold"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
@@ -62,6 +64,7 @@
           android:text="@string/register_user"
           android:textColor="@color/white"
           android:textSize="14sp"
+          android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
@@ -108,6 +111,7 @@
           android:text="@string/register_pswd_confirm"
           android:textColor="@color/white"
           android:textSize="14sp"
+          android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.004"
           app:layout_constraintStart_toStartOf="parent"
@@ -123,6 +127,7 @@
           android:text="@string/register_mail"
           android:textColor="@color/white"
           android:textSize="14sp"
+          android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.002"
           app:layout_constraintStart_toStartOf="parent"
@@ -138,6 +143,7 @@
           android:text="@string/register_pswd"
           android:textColor="@color/white"
           android:textSize="14sp"
+          android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.003"
           app:layout_constraintStart_toStartOf="parent"
@@ -263,6 +269,7 @@
           android:fontFamily="@font/quicksand_bold"
           android:text="@string/register_btn"
           android:textAllCaps="false"
+          android:textSize="20sp"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
@@ -276,8 +283,9 @@
           android:layout_marginTop="16dp"
           android:backgroundTint="@color/background"
           android:contentDescription="@string/register_btn"
+          android:onClick="changeToLoginActivity"
           app:icon="@mipmap/ic_return_foreground"
-          app:iconSize="40dp"
+          app:iconSize="30dp"
           app:iconTint="@color/accent_color"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
