--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -43,6 +43,7 @@
           android:layout_marginTop="12dp"
           android:layout_marginEnd="40dp"
           android:fontFamily="@font/asap"
+          android:onClick="changeToLastActivity"
           android:text="@string/login"
           android:textColor="@color/white"
           android:textSize="16sp"
@@ -283,7 +284,7 @@
           android:layout_marginTop="16dp"
           android:backgroundTint="@color/background"
           android:contentDescription="@string/register_btn"
-          android:onClick="changeToLoginActivity"
+          android:onClick="changeToLastActivity"
           app:icon="@mipmap/ic_return_foreground"
           app:iconSize="30dp"
           app:iconTint="@color/accent_color"
