--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_200">#8252C2</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -10,7 +10,7 @@
     <color name="background">#31384B</color>
     <color name="detail_color_primary">#FFDAD6</color>
     <color name="accent_color">#FFBCB5</color>
-    <color name="hints">#989EB1</color>
+    <color name="hints">#90A4AE</color>
     <color name="detail_color_secondary">#9AA4C1</color>
     <color name="contrast_background">#374058</color>
 </resources>
