--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:layout_centerHorizontal="false"
     android:background="#31384B"
-    android:backgroundTint="#31384B"
-    tools:context=".LoginActivity">
+    android:backgroundTint="#31384B" >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,6 +15,21 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btnReturnF"
+                android:layout_width="57dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="16dp"
+                android:backgroundTint="@color/background"
+                android:contentDescription="@string/register_btn"
+                android:onClick="changeToLastActivity"
+                app:icon="@mipmap/ic_return_foreground"
+                app:iconSize="30dp"
+                app:iconTint="@color/accent_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
             <ImageView
                 android:id="@+id/imgLogo2"
@@ -31,47 +45,13 @@
                 app:srcCompat="@mipmap/ic_main_logo_foreground" />
 
             <TextView
-                android:id="@+id/txtAccount"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/asap"
-                android:onClick="changeToForgotPasswordActivity"
-                android:text="@string/forgot_password"
-                android:textColor="#90A4AE"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPswd"
-                tools:ignore="TouchTargetSizeCheck" />
-
-            <TextView
-                android:id="@+id/txtLogin_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="40dp"
-                android:fontFamily="@font/asap"
-                android:onClick="changeToRegisterActivity"
-                android:text="@string/register_2"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.206"
-                app:layout_constraintStart_toEndOf="@+id/txtAccount"
-                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
-
-            <TextView
                 android:id="@+id/txtForgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="40dp"
                 android:fontFamily="@font/quicksand_bold"
-                android:text="@string/login"
+                android:text="@string/forgot_password"
                 android:textColor="@color/accent_color"
                 android:textSize="26sp"
                 android:textStyle="bold"
@@ -82,12 +62,12 @@
 
             <TextView
                 android:id="@+id/txtInstruction"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="338dp"
+                android:layout_height="61dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/asap"
-                android:text="@string/login_msg"
+                android:text="@string/text_forgot"
                 android:textColor="#90A4AE"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -112,22 +92,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtInstruction" />
 
             <TextView
-                android:id="@+id/txtPswd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/asap"
-                android:text="@string/register_pswd"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />
-
-            <TextView
                 android:id="@+id/txtHanasu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -145,35 +109,21 @@
                 android:layout_width="0dp"
                 android:layout_height="62dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/round_button"
                 android:backgroundTint="@color/purple_500"
                 android:fontFamily="@font/quicksand_bold"
                 android:onClick="loginAccount"
-                android:text="@string/login_btn"
+                android:text="@string/send"
                 android:textAllCaps="false"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtAccount"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
                 tools:ignore="DuplicateSpeakableTextCheck" />
-
-            <TextView
-                android:id="@+id/txtNewMember"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="76dp"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/asap"
-                android:text="@string/new_member"
-                android:textColor="#90A4AE"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnSend" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayoutEmail"
@@ -186,40 +136,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtMail">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edtTxtEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/background"
                     android:gravity="bottom"
-                    android:textColor="@color/white"
-                    android:inputType="textEmailAddress" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayoutPswd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:hint="@string/register_pswd_hint"
-                android:textColorHint="@color/hints"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtPswd">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edtTxtPswd"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/background"
-                    android:gravity="bottom"
-                    android:inputType="textVisiblePassword|textPassword"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/hints" />
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/white" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
