Added recovery email capability

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:layout_centerHorizontal="false"
     android:background="#31384B"
-    android:backgroundTint="#31384B" >
+    android:backgroundTint="#31384B"
+    android:onClick="sendForgotPasswordCode">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -114,7 +115,7 @@
                 android:background="@drawable/round_button"
                 android:backgroundTint="@color/purple_500"
                 android:fontFamily="@font/quicksand_bold"
-                android:onClick="loginAccount"
+                android:onClick="sendForgotPasswordCode"
                 android:text="@string/send"
                 android:textAllCaps="false"
                 android:textSize="20sp"
