Inclusión de elementos y eliminación de otros
Se reintegraron el "PasswordToggle" y el ícono de error de los TextInputLayouts fue eliminado

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -185,7 +185,9 @@
                 android:textColorHint="@color/hints"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtMail">
+                app:layout_constraintTop_toBottomOf="@+id/txtMail"
+                app:errorIconDrawable="@null">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edtTxtEmail"
                     android:layout_width="match_parent"
@@ -206,7 +208,11 @@
                 android:textColorHint="@color/hints"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtPswd">
+                app:layout_constraintTop_toBottomOf="@+id/txtPswd"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="#FFFFFF"
+                app:errorIconDrawable="@null">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edtTxtPswd"
                     android:layout_width="match_parent"
