--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,7 +27,7 @@
           android:layout_marginTop="12dp"
           android:fontFamily="@font/asap"
           android:text="@string/already_login"
-          android:textColor="#90A4AE"
+          android:textColor="@color/instruction"
           android:textSize="16sp"
           android:textStyle="bold"
           app:layout_constraintBottom_toBottomOf="parent"
@@ -80,7 +80,7 @@
           android:layout_marginTop="12dp"
           android:fontFamily="@font/asap"
           android:text="@string/register_instruction"
-          android:textColor="#90A4AE"
+          android:textColor="@color/instruction"
           android:textSize="16sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
