--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/background"
         android:contentDescription="@string/register_btn"
-        android:onClick="changeToLastActivity"
+        android:onClick="changeToLoginActivity"
         app:icon="@mipmap/ic_return_foreground"
         app:iconSize="30dp"
         app:iconTint="@color/accent_color"
